Remove loop from client_connection

--- a/404.html
+++ b/404.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-< !DOCTYPE HTML>
 <html>
 <head>
-<title>404 - this page does not exist</title>
+<title>404 - Page not Found</title>
 </head>
 <body>
 <img src="obama.png" alt="green">
